# rutherford-scattering

./: .gitignore  CMakeLists.txt  README.txt  ]  main.cc  output.root  run.mac
.data/: output-v1-n1e7.root
include/: RutherfordActionInitialization.hh  RutherfordAnalysisMessenger.hh  RutherfordArgument.hh  RutherfordArgumentParser.hh  RutherfordCommands.h  RutherfordConstructionMessenger.hh  RutherfordDefaults.h  RutherfordDetectorConstruction.hh  RutherfordEventAction.hh  RutherfordGeant4Shorthand.h  RutherfordGeneratorAction.hh  RutherfordGeneratorMessenger.hh  RutherfordGeneratorType.h  RutherfordGeometryMessenger.hh  RutherfordHit.hh  RutherfordPhysicsList.hh  RutherfordPrint.hh  RutherfordRunAction.hh  RutherfordRunMessenger.hh  RutherfordSensitiveDetector.hh  RutherfordSteppingAction.hh  RutherfordUnitDefinition.hh
python/: rutherford_analyzer.py  rutherford_config.py  rutherford_constants.py  rutherford_critical.py  rutherford_hit_analyzer.py  rutherford_physics.py  rutherford_regimes.py  rutherford_run_generator.py  rutherford_scales.py  rutherford_vavilov.py  system_of_units.py
src/: RutherfordActionInitialization.cc  RutherfordAnalysisMessenger.cc  RutherfordArgument.cc  RutherfordArgumentParser.cc  RutherfordConstructionMessenger.cc  RutherfordDetectorConstruction.cc  RutherfordEventAction.cc  RutherfordGeneratorAction.cc  RutherfordGeneratorMessenger.cc  RutherfordGeometryMessenger.cc  RutherfordHit.cc  RutherfordPhysicsList.cc  RutherfordPrint.cc  RutherfordRunAction.cc  RutherfordRunMessenger.cc  RutherfordSensitiveDetector.cc  (+2 more)
